--- a/backend/uploads/document.tex
+++ b/backend/uploads/document.tex
@@ -1,5 +1,51 @@
-\documentclass{article}
+\documentclass[a4paper]{article}
+\usepackage[utf8]{inputenc}
+\usepackage{amsmath, amssymb}
+\usepackage{lmodern}
+\usepackage{longtable}
+\usepackage{xcolor}
+\usepackage{graphicx}
+\usepackage{geometry}
+\usepackage{caption}
+
+% Set image path
+\graphicspath{{uploads/images/}}
+
+% Set better page margins
+\geometry{
+  a4paper,
+  margin=2cm,
+  top=2.5cm,
+}
+
+\setlength{\parskip}{10pt}
+\setlength{\parindent}{10pt}
+
 \begin{document}
-First document. This is a simple example, with no 
-extra parameters or packages included.
+
+% Logo and header section
+\begin{center}
+  \includegraphics[height=2cm]{uploads/images/onam.jpg}
+  \vspace{0.3cm}
+  
+  {\Large \textbf{SEMESTER QUESTION PAPER}}
+\end{center}
+
+\vspace{0.5cm}
+
+\begin{center}
+  {\large \textbf{APJ ABDUL KALAM TECHNOLOGICAL UNIVERSITY}}\\
+  {\large \textbf{FIRST/SECOND SEMESTER B. TECH DEGREE EXAMINATION}}
+\end{center}
+
+\vspace{0.5cm}
+
+\begin{center}
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=0.5\textwidth]{uploads/images/onam.jpg}
+        \caption{Graph for calculation}
+    \end{figure}
+\end{center}
+
 \end{document}
